@@ -24,6 +24,7 @@ import org.slf4j.LoggerFactory;
 
 import com.bwssystems.HABridge.util.BackupHandler;
 import com.bwssystems.HABridge.util.JsonTransformer;
+import com.bwssystems.HABridge.util.ParseRoute;
 import com.google.gson.Gson;
 
 public class BridgeSettings extends BackupHandler {
@@ -166,8 +167,9 @@ public class BridgeSettings extends BackupHandler {
 	        theBridgeSettings.setNestpwd(System.getProperty("nest.pwd"));
         }
 
+		ParseRoute aDefaultRoute = ParseRoute.getInstance();
         if(theBridgeSettings.getUpnpConfigAddress() == null || theBridgeSettings.getUpnpConfigAddress().trim().equals("") || theBridgeSettings.getUpnpConfigAddress().trim().equals("0.0.0.0")) {
-        	addressString = checkIpAddress(null, true);
+        	addressString = aDefaultRoute.getLocalIPAddress();
         	if(addressString != null) {
         		theBridgeSettings.setUpnpConfigAddress(addressString);
         		log.info("Adding " + addressString + " as our default upnp config address.");
@@ -177,8 +179,10 @@ public class BridgeSettings extends BackupHandler {
         }
         else {
         	addressString = checkIpAddress(theBridgeSettings.getUpnpConfigAddress(), false);
-        	if(addressString == null)
-        		log.warn("The upnp config address, " + theBridgeSettings.getUpnpConfigAddress() + ", does not match any known IP's on this host.");
+        	if(addressString == null) {
+				addressString = aDefaultRoute.getLocalIPAddress();
+				log.warn("The upnp config address, " + theBridgeSettings.getUpnpConfigAddress() + ", does not match any known IP's on this host. Using default address: " + addressString);
+			}
         }
         
         if(theBridgeSettings.getUpnpResponsePort() == null)
@@ -194,7 +198,7 @@ public class BridgeSettings extends BackupHandler {
         	theBridgeSettings.setUpnpGroupDb(Configuration.GROUP_DB_DIRECTORY);
         
         if(theBridgeSettings.getNumberoflogmessages() == null || theBridgeSettings.getNumberoflogmessages() <= 0)
-        	theBridgeSettings.setNumberoflogmessages(new Integer(Configuration.NUMBER_OF_LOG_MESSAGES));
+        	theBridgeSettings.setNumberoflogmessages(Integer.valueOf(Configuration.NUMBER_OF_LOG_MESSAGES));
 
         if(theBridgeSettings.getButtonsleep() == null || theBridgeSettings.getButtonsleep() < 0)
         	theBridgeSettings.setButtonsleep(Integer.parseInt(Configuration.DEFAULT_BUTTON_SLEEP));
@@ -215,8 +219,10 @@ public class BridgeSettings extends BackupHandler {
         // Lifx is either configured or not, so it does not need an update.
        if(serverPortOverride != null)
         	theBridgeSettings.setServerPort(serverPortOverride);
-        if(serverIpOverride != null)
+        if(serverIpOverride != null) {
         	theBridgeSettings.setWebaddress(serverIpOverride);
+        	theBridgeSettings.setUpnpConfigAddress(serverIpOverride);
+        }
         if(upnpStrictOverride != null)
         	theBridgeSettings.setUpnpStrict(Boolean.parseBoolean(upnpStrictOverride));
 		setupParams(Paths.get(theBridgeSettings.getConfigfile()), ".cfgbk", "habridge.config-");
